Fix hero video width and alignment

--- a/themes/gopherconsg-2017/static/css/gopherconsg.css
+++ b/themes/gopherconsg-2017/static/css/gopherconsg.css
@@ -705,7 +705,7 @@ header .header-content .header-content-inner p {
     header .header-content .header-content-inner {
         margin-right: auto;
         margin-left: auto;
-        max-width: 1000px;
+        max-width: 700px;
     }
 
     header .header-content .header-content-inner p {
@@ -714,6 +714,21 @@ header .header-content .header-content-inner p {
         max-width: 80%;
         font-size: 18px;
     }
+}
+
+.hero-video {
+  position: relative;
+  overflow: hidden;
+  padding-top: 56.25%;
+}
+
+.hero-video iframe {
+  position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
 }
 
 .section-heading {
